WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278514
[
282602@main
] compilation failure
https://bugs.webkit.org/show_bug.cgi?id=278514
Summary
[282602@main] compilation failure
Jean-Yves Avenard [:jya]
Reported
2024-08-21 21:48:24 PDT
282602@main
``` Showing All Errors Only /Users/jyavenard/Work/webkit/OpenSource/Source/WebKit/Platform/spi/ios/FrontBoardServicesSPI.h:48:1: Duplicate interface definition for class 'FBSOpenApplicationOptions' ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-21 21:48:37 PDT
<
rdar://problem/134469321
>
Jean-Yves Avenard [:jya]
Comment 2
2024-08-21 21:49:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32576
EWS
Comment 3
2024-08-21 21:52:17 PDT
Committed
282605@main
(70ee2058cb7c): <
https://commits.webkit.org/282605@main
> Reviewed commits have been landed. Closing PR #32576 and removing active labels.
Ben Schwartz
Comment 4
2024-08-22 09:09:07 PDT
Reopened Bugzilla. REGRESSION (
282602@main
): [ iOS ] App WebKitTestRunnerApp.app crashed before stdin could be attached, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=278525
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug