[282602@main] compilation failure https://bugs.webkit.org/show_bug.cgi?id=278514 rdar://134469321

Unreviewed build fix.

* Source/WebKit/Platform/spi/ios/FrontBoardServicesSPI.h:

Canonical link: https://commits.webkit.org/282605@main